--- a/data/.gitignore
+++ b/data/.gitignore
@@ -1,4 +1,5 @@
 metadata*
+/misc
 # /seq_global_analysis/*
 
 # echo metadata* >> .gitignore $ git rm --cached metadata* rm 'metadata*' $ git commit -m "Start ignoring metadata*" 
